--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header {
 
 
 
-section {
+.chamada {
 
     background: rgb(184, 156, 213);
 
@@ -61,5 +61,35 @@ h1 {
 p {
 
     font-size: 20px;
+
+}
+
+
+
+img {
+
+    height: 200px;
+
+}
+
+
+
+.categoria-videos {
+
+    display: flex;
+
+    overflow-x: auto;
+
+    gap: 10px;
+
+}
+
+
+
+.categoria {
+
+    padding-left: 20px;
+
+    padding-right: 20px;
 
 }
